@@ -1,3 +1,9 @@
+2002-08-04  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c, src/gerbv_screen.h: Added superimposing selectable
+	  function to be used when you put "layer upon layer". I call it
+	  superimposing functions. Hope it's correct english.
+
 2002-08-01  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/draw.[hc], src/gerbv.c: Changed how layers are created and
